--- a/Fordítások/BentoBox/locales/Challenges/hu.yml
+++ b/Fordítások/BentoBox/locales/Challenges/hu.yml
@@ -454,11 +454,11 @@ challenges:
                 toggleable: "Toggle if undeployed challenges should be displayed"
 
         challenge-description:
-            level: '&f Szint: [level]'
+            level: '&&3 Szint: [level]'
             completed: '&b Teljesítve'
-            completed-times-of: '[donetimes]x teljesítve a maxból: [maxtimes]'
-            maxed-reached: '[donetimes]x teljesítve a maxból: [maxtimes]'
-            completed-times: 'Teljesítve [donetimes]x'
+            completed-times-of: '&a&l[donetimes]&ax teljesítve a maxból: &a&l[maxtimes]'
+            maxed-reached: '&a&l[donetimes]&ax teljesítve a maxból: &a&l[maxtimes]'
+            completed-times: '&aTeljesítve &a&l[donetimes]&ax'
             warning-items-take: '&c Teljesítéskor a küldetéshez szükséges tárgyakat elvesszük!'
             objects-close-by: '&c Minden szükséges tárgynak/entitásnak közel kell lennie hozzád a szigeten!'
             warning-entities-kill: '&c Teljesítéskor minden szükséges entitás meg lesz ölve!'
@@ -473,19 +473,19 @@ challenges:
             rewards-title: '&a  Jutalmak:'
             reward-items: '&6 Tárgy jutalmak:'
             reward-commands: '&6 Parancs jutalmak:'
-            required-items: 'Szükséges tárgyak:'
-            required-entities: 'Szükséges entitások:'
-            required-blocks: 'Szükséges blokkok:'
+            required-items: '&bSzükséges tárgyak:'
+            required-entities: '&bSzükséges entitások:'
+            required-blocks: '&bSzükséges blokkok:'
         level-description:
             completed: '&b Teljesítve'
             completed-challenges-of: '&3 [number] küldetést teljesítettél a maxból ([max]) ezen a szinten.'
             waver-amount: '&6 [value] küldetést hagyhatsz ki a következő szint feloldásához.'
-            experience-reward: '&6 XP jutalom: [value]'
+            experience-reward: '&6&l XP jutalom: [value]'
             money-reward: '&6 Pénzjutalom: $[value]'
-            reward-items: '&6 Tárgy jutalmak:'
+            reward-items: '&6&l Tárgy jutalmak:'
             reward-commands: '&6 Parancs jutalmak:'
         item-description:
-            item: '- [count] x [item]'
+            item: '- &e[count]x [item]'
             item-meta: '  ([meta])'
             item-enchant: '   - [enchant] [level]'
             item-name: '  [name]'
